# zak_visuals

./: .gitignore  Pipfile  TODO.md  Train.ipynb  Zak Visuals.touchosc  convert_ui2py.sh  pyproject.toml  requirements.txt
berlin/: config.py  main.py  train.py  zak.py  zak_gui.py
berlin/dataset/: __init__.py  audio.py  conditional.py  image.py  video.py
berlin/model/: autoencoder.py  decoder.py  encoder.py
berlin/pg_gan/: layers.py  mnist_example.py  model.py  progressBar.py
berlin/preprocess/: audio.py  images.py  utils.py
berlin/ui/: main.py  main.ui
nodz/: graph.json  nodz_demo.py  nodz_main.py
shaders/screen/: fragment.glsl  vertex.glsl
zak_visuals/: lazy_debugging.py  main.py  train.py  train_pg_gan.py
zak_visuals/nodes/: __init__.py  base_nodes.py  irregular_nodes.py  nodes.py
zak_visuals/pg_gan/: model.py
zak_visuals/utils/: constants.py  imagenet.py
