[tool.poetry]
name = "zak-visuals"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
librosa = "^0.10.1"
moderngl = "^5.10.0"
cupy = "^13.0.0"
pycuda = {path = "../pycuda/dist/pycuda-2024.1-cp311-cp311-linux_x86_64.whl"}
jack-client = "^0.5.4"
python-osc = "^1.8.3"
moderngl-window = "^2.4.5"
pyglet = "^2.0.14"
torchvision = "^0.17.1"
pyyaml = "^6.0.1"
tensorboard = "^2.16.2"
pytorch-pretrained-biggan = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
